added configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,51 @@
 spring.application.name=ai-digital-twin
+
+# --- Gemini  ----
+spring.ai.google.genai.chat.options.model=gemini-2.5-flash-lite
+spring.ai.google.genai.chat.options.temperature=0.7
+spring.ai.google.genai.chat.options.max-output-tokens=4096
+
+# ==== JWT Configuration ====
+# Token expiration in milliseconds (24 hours)
+jwt.expiration-in-ms=86400000
+# Password reset token expiration in milliseconds (10 minutes)
+jwt.password-reset-expiration-in-ms=600000
+
+# ==== OTP Configuration ====
+otp.expiry-minutes=5
+otp.length=6
+otp.resend-wait-seconds=300
+
+# ==== GMAIL SMTP CONFIG ====
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ==== Caching Configuration ====
+spring.cache.type=caffeine
+spring.cache.cache-names=profileCache
+spring.cache.caffeine.spec=maximumSize=10000,expireAfterWrite=30m
+
+# Circuit Breaker: instance name = ai
+resilience4j.circuitbreaker.instances.ai.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.ai.slidingWindowSize=20
+resilience4j.circuitbreaker.instances.ai.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.ai.waitDurationInOpenState=30s
+resilience4j.circuitbreaker.instances.ai.permittedNumberOfCallsInHalfOpenState=5
+
+# Bulkhead: instance name = ai
+resilience4j.bulkhead.instances.ai.maxConcurrentCalls=10
+resilience4j.bulkhead.instances.ai.maxWaitDuration=0
+
+# Rate Limiter: instance name = ai
+resilience4j.ratelimiter.instances.ai.limitForPeriod=20
+resilience4j.ratelimiter.instances.ai.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.ai.timeoutDuration=0
+
+# ====  Actuator Configuration ====
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.metrics.distribution.percentiles.http.server.requests=0.5,0.95,0.99
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
