--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 
-# Ignore secret config
-src/main/resources/application.properties
+# local secrets (do NOT commit)
+src/main/resources/application-local.properties
+.env
+*.env
