--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
 # prod uses env vars (cloud)
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost}
 spring.data.mongodb.uri=${MONGODB_URI:}
 jwt.secret=${JWT_SECRET:}
 spring.ai.google.genai.api-key=${GEMINI_API_KEY:}
